Resolve Form Should be Scrollable bug
Commit resolves the form should be scrollable bug that prevented forms for adding or editing source systems or mappings to be scrollable if the screen was too small to display all content. The height of the mapping editor fieldmapping) has also been fixed to be responsive.

Resolves:
- Forms should be scrollable bug

Modifies:
- Responsive height of mapping editor (fieldmapping)

--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -60,6 +60,7 @@
 
 .formModalBody {
     height: Calc(100% - 50px);
+    overflow-y: scroll;
 }
 
 .formModalBody.secondary {
